[workspace]
members = [
    "text_buffer",
    "stroke_parser",
    "font_collector",
    "font_rasterizer",
    "rokid_3dof",
    "ui_support",
    "font_rasterizer_example",
    "sample_codes/*",
    "kashikishi",
    "ttf_overlap_remover",
    "highlighter",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0"
wgpu = "27.0.1"
# fork元は winit = "0.29.x" ブランチ。いくつかのパッチを当てたものを使っている。
# patch-1
#   wasm で ime support が十分でないのでパッチを当てている。
#   winit の ime support が十分にサポートされれば戻す予定。
#   今あてているパッチでは Fullscreen API のサポートが不十分なため wasm では Fullscreen をサポートしない。
# patch-2
#   winit の Windows でのサロゲートペアを含む文字があったときの Ime::Preedit の挙動を修正。
#   以下の issue で報告されている問題を修正。 issue が解決したら戻す予定。
#   https://github.com/rust-windowing/winit/issues/3967
winit = { git = "https://github.com/mitoma/winit", branch = "v0.29.x-with-patches" }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
env_logger = "0.11"
log = "0.4.28"
pollster = "0.4"
image = "0.25.8"
rustybuzz = "0.20.1"
web-time = { version = "1.1.0" }
cgmath = "0.18"
bytemuck = { version = "1.24.0", features = ["derive"] }
bitflags = "2.10.0"
rand = "0.9.2"
cfg-if = "1.0.4"
arboard = "3.5.0"
dirs = "6.0.0"

# 複数のクレートで使用される依存関係
unicode-width = "0.2.2"
cached = "0.56.0"
usvg = "0.45.1"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = "0.3.81"
getrandom = "0.3.4"
encoding_rs = "0.8.33"
hidapi = "2.6.1"
vqf-rs = "0.3.0"
tiny-skia-path = "0.11.4"
tiny-skia = "0.11.4"
indoc = "2.0.7"
similar = "2.7.0"
serde-jsonlines = "0.7.0"
chrono = "0.4.42"
clap = "4.5.50"
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
tree-sitter-java = "0.23.5"
tree-sitter-go = "0.25.0"
tree-sitter-md = "0.5.1"
tree-sitter-json = "0.24.8"
tree-sitter-bash = "0.25.0"
tree-sitter-toml-ng = "0.7.0"

rayon = "1.11.0"
apng = { git = "https://github.com/mitoma/apng", branch = "master" }
fs_extra = "1.3.0"
glob = "0.3.3"
windows = "0.62.2"
windows-future = "0.3.2"
winresource = "0.1.27"

[profile.release-optimized]
inherits = "release"
debug = false
lto = true
