[workspace]
members = [
    "text_buffer",
    "stroke_parser",
    "markdown_heading_splitter",
    "font_collector",
    "font_rasterizer",
    "rokid_3dof",
    "ui_support",
    "font_rasterizer_example",
    "sample_codes/*",
    "kashikishi",
    "ttf_overlap_remover",
    "highlighter",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0.18"
wgpu = "30.0.0"
# fork元は winit = "0.31.x" ブランチ。いくつかのパッチを当てたものを使っている。
# patch-1
#   wasm で ime support が十分でないのでパッチを当てている。
#   EditContext API を利用している都合上、 2025/11/30 現在、Chromium ベースのブラウザでしか動作しない。
#   以下の issue で対応を進めているが upstream に取り込まれたら fork をやめる。
#   
#   https://github.com/rust-windowing/winit/issues/4424
winit = { git = "https://github.com/mitoma/winit", branch = "v0.31.x-fork-for-kashikishi" }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.150"
toml = "1.1.2"
env_logger = "0.11.11"
log = "0.4.33"
pollster = "0.4.0"
image = "0.25.10"
rustybuzz = "0.20.1"
web-time = { version = "1.1.0" }
glam = "0.33.2"
bytemuck = { version = "1.25.0", features = ["derive"] }
bitflags = "2.13.0"
rand = "0.10.2"
cfg-if = "1.0.4"
arboard = "3.6.1"
dirs = "6.0.0"
futures = "0.3.32"

# 複数のクレートで使用される依存関係
unicode-width = "0.2.2"
cached = "2.0.2"
usvg = "0.47.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = "0.3.103"
js-sys = "0.3.103"
getrandom = "0.4.3"
encoding_rs = "0.8.33"
hidapi = "2.6.6"
vqf-rs = "0.3.0"
tiny-skia-path = "0.12.0"
tiny-skia = "0.12.0"
indoc = "2.0.7"
similar = "3.1.1"
serde-jsonlines = "0.7.0"
chrono = "0.4.45"
clap = "4.6.1"
tree-sitter = "0.26.10"
tree-sitter-rust = "0.24.2"
tree-sitter-java = "0.23.5"
tree-sitter-go = "0.25.0"
tree-sitter-md = "0.5.3"
tree-sitter-json = "0.24.8"
tree-sitter-bash = "0.25.1"
tree-sitter-toml-ng = "0.7.0"
html-to-markdown-rs = "3.8.2"

redb = "4.1.0"
rayon = "1.12.0"
apng = { git = "https://github.com/mitoma/apng", branch = "master" }
fs_extra = "1.3.0"
glob = "0.3.3"
windows = "0.62.2"
windows-future = "0.3.2"
winresource = "0.1.31"

regex = "1.12.4"
png = "0.18.1"

[profile.release-optimized]
inherits = "release"
debug = false
lto = true

# Dev 環境でのテスト時の動作が遅いので導入してみたが、ビルドが遅くなる事のつらみの方が大きい
#[profile.dev]
#opt-level = 1
#
#[profile.dev.package."*"]
#opt-level = 2
