[package]
name = "font_collector"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
rustybuzz = { workspace = true }
dirs = { workspace = true }
encoding_rs = { workspace = true }
