[package]
name = "font_rasterizer"
version = "0.1.0"
authors = ["Ryo Mitoma <mutetheradio@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = { workspace = true }
bytemuck = { version = "1.4", features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bitflags = "2.5.0"
image = { workspace = true }
rand = "0.8.5"

rustybuzz.workspace = true
cgmath = "0.18"

instant = { workspace = true }
unicode-width = "0.1.12"
once_cell = "1.19.0"
cached = "0.51.3"

# レーベンシュタイン距離を求めるためのライブラリ
strsim = "0.11.1"

nenobi = { git = "https://github.com/mitoma/sandbox", branch = "main" }
bezier_converter = { git = "https://github.com/mitoma/sandbox", branch = "main" }
font_collector = { version = "0.1.0", path = "../font_collector" }
text_buffer = { version = "0.1.0", path = "../text_buffer" }
stroke_parser = { version = "0.1.0", path = "../stroke_parser" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0.0"
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[build-dependencies]
fs_extra = "1.2"
glob = "0.3"

[dev-dependencies]
text_buffer = { version = "0.1.0", path = "../text_buffer" }
stroke_parser = { version = "0.1.0", path = "../stroke_parser" }
apng = { git = "https://github.com/mitoma/apng", branch = "master" }
rayon = "1.10.0"
clap = "4.5.4"
pulldown-cmark = "0.10.3"
