[package]
name = "font_rasterizer"
version = "0.1.0"
authors = ["Ryo Mitoma <mutetheradio@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bitflags = { workspace = true }
rand = { workspace = true }

rustybuzz.workspace = true
cgmath.workspace = true
bytemuck.workspace = true

instant = { workspace = true }
unicode-width = "0.2"
cached = "0.54.0"

bezier_converter = { git = "https://github.com/mitoma/sandbox", branch = "main" }
font_collector = { path = "../font_collector" }
text_buffer = { path = "../text_buffer" }
stroke_parser = { path = "../stroke_parser" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[build-dependencies]
fs_extra = "1.2"
glob = "0.3"
