[package]
name = "font_rasterizer"
version = "0.1.0"
authors = ["Ryo Mitoma <mutetheradio@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
thiserror = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bitflags = { workspace = true }
rand = { workspace = true }
image ={ workspace = true}

rustybuzz.workspace = true
cgmath.workspace = true
bytemuck.workspace = true

instant = { workspace = true }
unicode-width = { workspace = true }
cached = { workspace = true }
usvg = { workspace = true }

bezier_converter = { git = "https://github.com/mitoma/sandbox", branch = "main" }
font_collector = { path = "../font_collector" }
text_buffer = { path = "../text_buffer" }
stroke_parser = { path = "../stroke_parser" }
ttf_overlap_remover = { path = "../ttf_overlap_remover" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }

[build-dependencies]
fs_extra = { workspace = true }
glob = { workspace = true }
