[package]
name = "font_rasterizer_example"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
font_rasterizer = { path = "../font_rasterizer" }
stroke_parser = { path = "../stroke_parser" }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
cgmath = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
instant = { version = "0.1", features = ["wasm-bindgen"] }
font_collector = { path = "../font_collector" }
ui_support = { path = "../ui_support" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0.0"
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
# wasm-pack する時に js features を有効にする必要がある。
# getrandom は複数の crate から間接的に依存されているので本来はもっといい指定の方法があるのではないかと思うが
# 確たる答はないのでとりあえずこの指定で行く。
getrandom = { version = "0.2", features = ["js"] }
