[package]
name = "font_rasterizer_example"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
font_rasterizer = { path = "../font_rasterizer" }
stroke_parser = { path = "../stroke_parser" }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
web-time = { workspace = true }
font_collector = { path = "../font_collector" }
ui_support = { path = "../ui_support" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wgpu = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }
# wasm-pack する時に js features を有効にする必要がある。
# getrandom は複数の crate から間接的に依存されているので本来はもっといい指定の方法があるのではないかと思うが
# 確たる答はないのでとりあえずこの指定で行く。
getrandom = { workspace = true, features = ["wasm_js"] }
