[package]
name = "highlighter"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-bash = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
