[package]
name = "kashikishi"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
image = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

font_collector = { version = "0.1.0", path = "../font_collector" }
font_rasterizer = { version = "0.1.0", path = "../font_rasterizer" }
text_buffer = { version = "0.1.0", path = "../text_buffer" }
stroke_parser = { version = "0.1.0", path = "../stroke_parser" }

chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
arboard = "3.4.0"
