[package]
name = "kashikishi"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
image = { workspace = true }
cgmath = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
arboard = { workspace = true }
dirs = { workspace = true }

font_collector = { path = "../font_collector" }
font_rasterizer = { path = "../font_rasterizer" }
text_buffer = { path = "../text_buffer" }
stroke_parser = { path = "../stroke_parser" }
rokid_3dof = { path = "../rokid_3dof" }
ui_support = { path = "../ui_support" }

chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
