[package]
name = "rokid_3dof"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror.workspace = true
bytemuck.workspace = true
cgmath.workspace = true
hidapi = "2.6.1"
vqf-rs = { version = "0.2", features = ["f32", "motion-bias-estimation"] }

[dev-dependencies]
font_rasterizer = { path = "../font_rasterizer" }
font_collector = { path = "../font_collector" }
stroke_parser = { path = "../stroke_parser" }
ui_support = { path = "../ui_support" }
log.workspace = true
instant.workspace = true
winit.workspace = true
pollster.workspace = true
