[package]
name = "stroke_parser"
version = "0.1.0"
authors = ["mitoma <mutetheradio@gmail.com>"]
edition = "2021"

[dependencies]
winit = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
text_buffer = { version = "0.1.0", path = "../text_buffer" }
