[package]
name = "stroke_parser"
version = "0.1.0"
authors = ["mitoma <mutetheradio@gmail.com>"]
edition = "2024"

[dependencies]
winit = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
text_buffer = { path = "../text_buffer" }
env_logger = { workspace = true }
