[package]
name = "ttf-overlap-remover"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
font_collector = { path = "../font_collector" }
tiny-skia-path = "0.11.4"

[dev-dependencies]
tiny-skia = "0.11.4"
rustybuzz = { workspace = true }
env_logger = { workspace = true }
rand = {workspace = true }
