[package]
name = "ui_support"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
image = { workspace = true }
instant = { workspace = true }
cgmath = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }
cfg-if = { workspace = true }

nenobi = { git = "https://github.com/mitoma/sandbox", branch = "main" }
font_rasterizer = { path = "../font_rasterizer" }
font_collector = { path = "../font_collector" }
stroke_parser = { path = "../stroke_parser" }
text_buffer = { path = "../text_buffer" }
serde-jsonlines = "0.6.0"

similar = "2.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { workspace = true }

[dev-dependencies]
apng = { git = "https://github.com/mitoma/apng", branch = "master" }
rayon = "1.10"
