[package]
name = "ui_support"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
image = { workspace = true }
web-time = { workspace = true }
cgmath = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }
cfg-if = { workspace = true }

nenobi = { git = "https://github.com/mitoma/sandbox", branch = "main" }
font_rasterizer = { path = "../font_rasterizer" }
font_collector = { path = "../font_collector" }
stroke_parser = { path = "../stroke_parser" }
text_buffer = { path = "../text_buffer" }
serde-jsonlines = { workspace = true }

similar = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { workspace = true }
highlighter = { path = "../highlighter" }

[dev-dependencies]
apng = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true, features = ["derive"] }
