[package]
name = "wgpu_gui"
version = "0.1.0"
authors = ["mitoma <mutetheradio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "*"
wgpu_glyph = "*"
rusttype = { version = "*", features = ["gpu_cache"] }
winit = "*"
log = "*"
env_logger = "*"
futures = "*"
text_buffer = { version = "0.1.0", path = "../text_buffer" }
stroke_parser = {version = "0.1.0", path = "../stroke_parser" }

[dev-dependencies]
cgmath = "*"
bytemuck = "*"

[dev-dependencies.wgt]
version = "0.5"
package = "wgpu-types"
