[package]
name = "wgpu_gui"
version = "0.1.0"
authors = ["mitoma <mutetheradio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.10"
futures = "0.3"
bytemuck = { version = "1.7", features = [ "derive" ] }
anyhow = "1.0"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }
text_buffer = { version = "0.1.0", path = "../text_buffer" }
stroke_parser = { version = "0.1.0", path = "../stroke_parser" }
nenobi = { git = "https://github.com/mitoma/nenobi", branch = "main" }
