[package]
name = "wgpu_gui"
version = "0.1.0"
authors = ["mitoma <mutetheradio@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.13"
bytemuck = { version = "1.12.1", features = [ "derive" ] }
anyhow = "1.0"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }
text_buffer = { version = "0.1.0", path = "../text_buffer" }
stroke_parser = { version = "0.1.0", path = "../stroke_parser" }
nenobi = { git = "https://github.com/mitoma/nenobi", branch = "main" }
