[package]
name = "pig_action_game"
version = "0.1.0"
edition = "2024"

[dependencies]
font_collector = { path = "../../font_collector" }
font_rasterizer = { path = "../../font_rasterizer" }
stroke_parser = { path = "../../stroke_parser" }
ui_support = { path = "../../ui_support" }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
web-time = { workspace = true }
glam = { workspace = true }
nenobi = { git = "https://github.com/mitoma/sandbox", branch = "main" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wgpu = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }
getrandom = { workspace = true, features = ["wasm_js"] }
