[package]
name = "showcase"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
font_collector = { path = "../../font_collector" }
font_rasterizer = { path = "../../font_rasterizer" }
text_buffer = { path = "../../text_buffer" }
stroke_parser = { path = "../../stroke_parser" }
ui_support = { path = "../../ui_support" }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
web-time = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }
# wasm-pack する時に js features を有効にする必要がある。
# getrandom は複数の crate から間接的に依存されているので本来はもっといい指定の方法があるのではないかと思うが
# 確たる答はないのでとりあえずこの指定で行く。
getrandom = { workspace = true, features = ["wasm_js"] }
