[package]
name = "win_hello"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winit = { workspace = true }
windows-future = { workspace = true }
pollster = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Security_Credentials",
    "Security_Credentials_UI",
    "Win32_System_WinRT",
    #"Storage_Streams",
    "Win32_UI_WindowsAndMessaging",
]
